--- a/templates/faq
+++ b/templates/faq
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+  <title>qxlkbh faq</title>
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -27,7 +28,8 @@
   <h2>Q: How do I pronounce "qxlkbh"</h2>
   <p>A: [qxlkbh], in ipa. Sorry.</p>
   <h2>Q: Why are the navigation buttons the opposite of how they're supposed to be</h2>
-  <p>A: to mess with the readership, basically. It's essentially a joke about the unaesthetic aesthetic of the website.</p>
+  <p>A: to mess with the readership, basically. It's essentially a joke about the unaesthetic aesthetic of the website.
+  </p>
 </body>
 
 </html>
