--- a/templates/faq
+++ b/templates/faq
@@ -40,6 +40,8 @@
   <h2>Q: Why are the navigation buttons the opposite of how they're supposed to be</h2>
   <p>A: to mess with the readership, basically. It's essentially a joke about the unaesthetic aesthetic of the website.
   </p>
+  <h2>Q: I want to yell at you, how I can I contact you</h2>
+  <p>A: it's probably easiest if you just create an issue <a href=https://github.com/qxlkbh/qxlkbh.github.io/issues>here</a> for now.</p> 
 </body>
 
 </html>
