--- a/templates/faq
+++ b/templates/faq
@@ -20,7 +20,7 @@
 </head>
 
 <body style="background-color:#fefefe;">
-  <a href="/house"> <img src="qxlkbh.png" /></a>
+  <a href="/house"> <img src="/qxlkbh.png" /></a>
   <p>the comic with a tagline that is this tagline</p>
   <h1>Info and stuff</h1>
   <p>qxlkbh is a webcomic which is for the most part very meta; it's an example of metafiction. Most of the humor is
