--- a/templates/faq
+++ b/templates/faq
@@ -1,22 +1,10 @@
+<!-- to whoever forgot doctype html: ily^2-->
+<!DOCTYPE html>
 <html>
 
 <head>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0SY2MP8PLC"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-0SY2MP8PLC');
-  </script>
-
+  {{ use("_header") }}
   <title>qxlkbh faq</title>
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <meta charset="utf-8">
 </head>
 
 <body style="background-color:#fefefe;">
