--- a/templates/faq
+++ b/templates/faq
@@ -18,9 +18,9 @@
     Moooosey (also "musija" or "musi"), who has way too many interests and is consequently an amateur linguist,
     mathematician, and composer-- oh, and Conway's Game of Life enthusiast.<br />
     Andrew, who is a troper and conwaylife enthusiast as well as the only European author of qxlkbh (so far) <br />
+    Dandan (ascendantDreamweaver), who is the website developer <br />
     <!-- PlanetN9ne, who PLACEHOLDER <br /> -->
     <!-- Sonata, who PLACEHOLDER <br /> -->
-    <!-- Dandan, who PLACEHOLDER <br /> -->
     <!-- Ian07, who PLACEHOLDER <br /> -->
   </p>
   <h1>FAQ</h1>
